--- a/src/components/graphic3/GraphicLSIM3.module.css
+++ b/src/components/graphic3/GraphicLSIM3.module.css
@@ -1,5 +1,5 @@
 .graphic {
     grid-area: g;
-    background-color: rgb(223, 245, 143);
-    color: yellow;
+    /*background-color: rgb(223, 245, 143);
+    /*color: yellow;*/
 }
